pkl-core/src/test/files/LanguageSnippetTests/input/errors/typeMismatchHelper.pkl
module foo.bar

class Baz
